# lambda-feed

./: .travis.yml  Main.hs  README.md  feeds-test.cabal  lambda-feed.cabal  stack.yaml
main/: Main.hs
src/: Events.hs  Feed.hs  LambdaFeed.hs  Main.hs  View.hs
src/LambdaFeed/: Actor.hs  Conversion.hs  Main.hs  Retrieval.hs  Types.hs  Widgets.hs
tests/: test.hs
