name:                lambda-feed
version:             0.1.0.0
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable lambda-feed
  main-is:             Main.hs
  ghc-options:         -threaded
  hs-source-dirs:      src
  build-depends:       SHA >= 1.6 && < 1.7
                     , acid-state >= 0.12 && < 0.13
                     , async >= 2.0 && < 2.1
                     , base
                     , containers >= 0.5 && < 0.6
                     , directory >= 1.2 && < 1.3
                     , extra >= 1.1 && < 1.2
                     , feed >= 0.3.9.2 && < 0.4
                     , formatting >= 6.2 && < 6.3
                     , http-client >= 0.4 && < 0.5
                     , lens >= 4.7 && < 4.9
                     , mtl >= 2.2 && < 2.3
                     , pipes >= 4.1 && < 4.2
                     , pipes-concurrency >= 2.0 && < 2.1
                     , process >= 1.2 && < 1.3
                     , safecopy >= 0.8 && < 0.9
                     , stm >= 2.4 && < 2.5
                     , text >= 1.2 && < 1.3
                     , time >= 1.5 && < 1.6
                     , transformers >= 0.4 && < 0.5
                     , vty >= 5.2 && < 5.3
                     , vty-ui >= 1.8 && < 1.9
                     , wreq >= 0.3 && < 0.4
  default-language:    Haskell2010