name:                lambda-feed
category:            Network
synopsis:            Lightweight commandline feed reader
version:             0.1.0.0
license:             GPL
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
cabal-version:       >=1.10
description:
  A rss/atom feed reader written in Haskell that works on the
  commandline.
source-repository   head
  type: git
  location: git://github.com/markus1189/lambda-feed.git

executable lambda-feed
  ghc-options:         -Wall -threaded
  hs-source-dirs:      src
  other-modules:       LambdaFeed
  build-depends:       base
                     , brick
                     , containers
                     , directory
                     , feed
                     , http-client
                     , lens
                     , mtl
                     , process
                     , stm
                     , text
                     , time
                     , transformers
                     , wreq
  main-is:             Main.hs
  default-language:    Haskell2010
